fix code review findings
